--- a/style.css
+++ b/style.css
@@ -211,7 +211,7 @@ main::before {
     height: 100%;
     position: absolute;
     background: var(--page-background) no-repeat,
-      url("../images/backgrounds/florest.png") no-repeat;
+      url("./images/backgrounds/florest.png") no-repeat;
     background-size: cover;
     z-index:-1
 }
@@ -399,7 +399,7 @@ footer::after {
     content: "";
     width: 300px;
     height: 200px;
-    background: url("../images/footer/tape.svg") no-repeat;
+    background: url("./images/footer/tape.svg") no-repeat;
     background-size: contain;
     position: absolute;
     bottom: -30px;
